tests/e2e/snapshots/e2e__cli_pull_zone__pull_zone_ip_list_json.snap
---
source: tests/e2e/cli_pull_zone.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "ip": "192.0.2.1"
  },
  {
    "ip": "203.0.113.0/24"
  }
]
