tests/e2e/snapshots/e2e__cli_pull_zone__pull_zone_list_table.snap
---
source: tests/e2e/cli_pull_zone.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
+------+--------------+----------------------------+---------+-----------+----------------+
| ID   | Name         | Origin                     | Enabled | Suspended | Bandwidth Used |
+------+--------------+----------------------------+---------+-----------+----------------+
| 1002 | test-zone-10 | https://origin.example.com | true    | false     | 89716735       |
+------+--------------+----------------------------+---------+-----------+----------------+
| 1001 | test-zone-15 | https://origin.example.com | true    | false     | 4400843        |
+------+--------------+----------------------------+---------+-----------+----------------+
