tests/e2e/snapshots/e2e__cli_pull_zone__pull_zone_referrer_list_json.snap
---
source: tests/e2e/cli_pull_zone.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "kind": "allowed",
    "hostname": "allowed.example.com"
  },
  {
    "kind": "allowed",
    "hostname": "*.partner.com"
  },
  {
    "kind": "blocked",
    "hostname": "badsite.com"
  }
]
