tests/e2e/snapshots/e2e__cli_pull_zone__pull_zone_referrer_list_table.snap
---
source: tests/e2e/cli_pull_zone.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
+---------+---------------------+
| Type    | Hostname            |
+---------+---------------------+
| allowed | allowed.example.com |
+---------+---------------------+
| allowed | *.partner.com       |
+---------+---------------------+
| blocked | badsite.com         |
+---------+---------------------+
